Validating-Policy/block-latest-image-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: no-latest-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Using 'latest' image tag is not allowed"
      pattern:
        spec:
          containers:
          - image: "!*:latest"
